LIMA-8 - adjusting loading wheel max top position and z-index to prevent the active button to pass over

--- a/compiled/css/style.css
+++ b/compiled/css/style.css
@@ -13066,12 +13066,12 @@ span.glyphicon-star.active {
   background: url("../img//loading.gif") no-repeat center center;
   width: 100%;
   height: 100%;
-  max-height: 300px;
+  max-height: 200px;
   top: 0;
   left: 0;
   text-align: center;
   display: block;
-  z-index: 3;
+  z-index: 4;
 }
 .loading:before {
   content: "";
@@ -13083,7 +13083,7 @@ span.glyphicon-star.active {
   width: 100%;
   height: 100%;
   text-align: center;
-  z-index: 2;
+  z-index: 3;
 }
 .loading.loading-dark:after {
   background-color: #424749;
