--- a/src/css/less/livescore/rules/ls-loading.less
+++ b/src/css/less/livescore/rules/ls-loading.less
@@ -11,12 +11,12 @@
     background: url("@{ls-image-loading}") no-repeat center center;
     width: 100%;
     height: 100%;
-    max-height: 300px;
+    max-height: 200px;
     top: 0;
     left: 0;
     text-align: center;
     display: block;
-    z-index: 3;
+    z-index: 4;
   }
   
   &:before{
@@ -29,7 +29,7 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    z-index: 2;
+    z-index: 3;
   }
   
   &.loading-dark{
